# catkin

catkin_ws/catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/catkin_ws/devel/lib/ilk_paket/: service_client  subscriber
catkin_ws/catkin_ws/devel/lib/pkgconfig/: ilk_paket.pc
catkin_ws/catkin_ws/devel/share/ilk_paket/cmake/: ilk_paketConfig.cmake
catkin_ws/catkin_ws/src/ilk_paket/: CMakeLists.txt  package.xml
catkin_ws/catkin_ws/src/ilk_paket/bagfiles/: 2021-11-11-19-59-09.bag
catkin_ws/catkin_ws/src/ilk_paket/launch/: test.launch
catkin_ws/catkin_ws/src/ilk_paket/node/: publisher.py  service_client.py  service_server.py  subscriber.py
catkin_ws/catkin_ws/src/ilk_paket/src/: publisher.cpp  service_client.cpp  service_server.cpp  subscriber.cpp
catkin_ws/catkin_ws/src/ilk_paket/srv/: toplam.srv
