<?xml version="1.0"?>
<package format="2">
  <name>ilk_paket</name>
  <version>0.0.1</version>
  <description>Bu bizim ilk paketimizdir.</description>

  <maintainer email="harunsimsek1940@gmail.com">harunros</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">http://wiki.ros.org/</url> -->
  
  <author email="harunsimsek1940@gmail.com">harun</author> -->

  <!--   <depend>roscpp</depend> -->
  
  <!--   <test_depend>gtest</test_depend> -->
 
  <!--   <doc_depend>doxygen</doc_depend> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
    
  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>


  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <export>

  </export>
</package>